work on register parts - auth modal

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,9 @@
 // === BASE ===
 @import 'base/resets';
 
+// === COMPONENTS ===
+@import 'components/inputs';
+
 body {
     font-family: 'Poppins', sans-serif;
 }
