add select cmp styles globally

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,9 @@
 // === BASE ===
 @import 'base/resets';
 
+// === VENDOR ===
+@import 'vendor/select';
+
 body {
     font-family: 'Poppins', sans-serif;
 }
